--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^2.5.3
-  firebase_core: ^1.10.0
-  firebase_auth: ^3.2.0
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-0
 
 dev_dependencies:
   flutter_test:
