--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^3.3.19
   modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   flutter_chat_bubble: ^2.0.0
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
